Writing PDF, but need to change page size differently

--- a/final_template/template.xml.j2
+++ b/final_template/template.xml.j2
@@ -109,7 +109,7 @@
 <text top="1422" left="72" width="150" height="44" font="6"><a href="#">Mongolia</a></text>
 <text top="1512" left="72" width="279" height="44" font="6"><a href="#">Republic of Korea</a></text>
 <text top="1661" left="72" width="405" height="64" font="5"><b>South-Eastern Asia</b></text>
-<text top="1764" left="72" width="285" height="44" font="6"><a href="#">Brunei Darussalam</text>
+<text top="1764" left="72" width="285" height="44" font="6"><a href="#">Brunei Darussalam</a></text>
 <text top="1854" left="72" width="165" height="44" font="6"><a href="#">Cambodia</a></text>
 <text top="1944" left="72" width="153" height="44" font="6"><a href="#">Indonesia</a></text>
 <text top="2034" left="72" width="535" height="44" font="6"><a href="#">Lao People’s Democratic Republic</a></text>
@@ -180,7 +180,7 @@
 <text top="2408" left="72" width="153" height="44" font="6"><a href="#">Honduras</a></text>
 <text top="2498" left="72" width="117" height="44" font="6"><a href="#">Mexico</a></text>
 <text top="2588" left="72" width="160" height="44" font="6"><a href="#">Nicaragua</a></text>
-<text top="2678" left="72" width="124" height="44" font="6">Panama</a></text>
+<text top="2678" left="72" width="124" height="44" font="6"><a href="#">Panama</a></text>
 <text top="2828" left="72" width="314" height="64" font="5"><b>South America</b></text>
 <text top="2930" left="72" width="153" height="44" font="6"><a href="#">Argentina</a></text>
 <text top="3020" left="72" width="450" height="44" font="6"><a href="#">Bolivia (Plurinational State of)</a></text>
@@ -200,18 +200,18 @@
 <text top="84" left="951" width="111" height="32" font="3"><a href="#ALL"><b>all regions</b></a></text>
 <text top="107" left="72" width="268" height="96" font="4"><b>Oceania</b></text>
 <text top="107" left="72" width="268" height="96" font="4"><a name="Oceania"></a></text>
-<text top="270" left="72" width="132" height="44" font="6"><a href="#">Australia</text>
-<text top="360" left="72" width="40" height="44" font="6"><a href="#">Fiji</text>
-<text top="450" left="72" width="262" height="44" font="6"><a href="#">French Polynesia</text>
-<text top="540" left="72" width="95" height="44" font="6"><a href="#">Guam</text>
-<text top="630" left="72" width="508" height="44" font="6"><a href="#">Micronesia (Federated States of)</text>
-<text top="720" left="72" width="244" height="44" font="6"><a href="#">New Caledonia</text>
-<text top="810" left="72" width="211" height="44" font="6"><a href="#">New Zealand</text>
-<text top="900" left="72" width="302" height="44" font="6"><a href="#">Papua New Guinea</text>
-<text top="990" left="72" width="108" height="44" font="6"><a href="#">Samoa</text>
-<text top="1080" left="72" width="258" height="44" font="6"><a href="#">Solomon Islands</text>
-<text top="1170" left="72" width="98" height="44" font="6"><a href="#">Tonga</text>
-<text top="1260" left="72" width="128" height="44" font="6"><a href="#">Vanuatu</text>
+<text top="270" left="72" width="132" height="44" font="6"><a href="#">Australia</a></text>
+<text top="360" left="72" width="40" height="44" font="6"><a href="#">Fiji</a></text>
+<text top="450" left="72" width="262" height="44" font="6"><a href="#">French Polynesia</a></text>
+<text top="540" left="72" width="95" height="44" font="6"><a href="#">Guam</a></text>
+<text top="630" left="72" width="508" height="44" font="6"><a href="#">Micronesia (Federated States of)</a></text>
+<text top="720" left="72" width="244" height="44" font="6"><a href="#">New Caledonia</a></text>
+<text top="810" left="72" width="211" height="44" font="6"><a href="#">New Zealand</a></text>
+<text top="900" left="72" width="302" height="44" font="6"><a href="#">Papua New Guinea</a></text>
+<text top="990" left="72" width="108" height="44" font="6"><a href="#">Samoa</a></text>
+<text top="1080" left="72" width="258" height="44" font="6"><a href="#">Solomon Islands</a></text>
+<text top="1170" left="72" width="98" height="44" font="6"><a href="#">Tonga</a></text>
+<text top="1260" left="72" width="128" height="44" font="6"><a href="#">Vanuatu</a></text>
 </page>
 <page number="6" position="absolute" top="0" left="0" height="4284" width="1152">
 <text top="84" left="951" width="111" height="32" font="3"><a href="#ALL"><b>all regions</b></a></text>
