Tweaks and adjustments

--- a/final_template/template.xml.j2
+++ b/final_template/template.xml.j2
@@ -6,7 +6,7 @@
 	<fontspec id="0" size="70" family="Times" color="#ffffff"/>
 	<fontspec id="1" size="70" family="Times" color="#ffffff"/>
 	<fontspec id="2" size="25" family="Times" color="#ffffff"/>
-<image top="0" left="0" width="1152" height="1536" src="cover.png"/>
+<image top="0" left="0" width="1152" height="1544" src="cover.png"/>
 <text top="337" left="242" width="416" height="96" font="0"><b>explore key  </b></text>
 <text top="424" left="242" width="504" height="96" font="0"><b>data on the P20</b></text>
 <text top="511" left="242" width="584" height="89" font="1">select your region:</text>
@@ -25,7 +25,7 @@
 	<fontspec id="5" size="46" family="Times" color="#e9443a"/>
 	<fontspec id="6" size="34" family="Times" color="#453e43"/>
 	<fontspec id="7" size="34" family="Times" color="#453e43"/>
-<image top="0" left="0" width="1152" height="6138" src="toc1.png"/>
+<image top="8" left="0" width="1152" height="6138" src="toc1.png"/>
 <text top="84" left="951" width="111" height="32" font="3"><a href="#ALL"><b>all regions</b></a></text>
 <text top="107" left="72" width="192" height="96" font="4"><b>Africa</b></text>
 <text top="107" left="72" width="192" height="96" font="4"><a name="Africa"></a></text>
@@ -92,7 +92,7 @@
 <text top="5886" left="72" width="82" height="44" font="6"><a>Togo</a></text>
 </page>
 <page number="3" position="absolute" top="0" left="0" height="5680" width="1152">
-<image top="0" left="0" width="1152" height="5680" src="toc2.png"/>
+<image top="8" left="0" width="1152" height="5680" src="toc2.png"/>
 <text top="84" left="951" width="111" height="32" font="3"><a href="#ALL"><b>all regions</b></a></text>
 <text top="107" left="72" width="138" height="96" font="4"><b>Asia</b></text>
 <text top="107" left="72" width="138" height="96" font="4"><a name="Asia"></a></text>
@@ -153,11 +153,11 @@
 <text top="5418" left="72" width="108" height="44" font="6"><a>Yemen</a></text>
 </page>
 <page number="4" position="absolute" top="0" left="0" height="4266" width="1152">
-<image top="0" left="0" width="1152" height="4266" src="toc3.png"/>
+<image top="8" left="0" width="1152" height="4266" src="toc3.png"/>
 <text top="84" left="951" width="111" height="32" font="3"><a href="#ALL"><b>all regions</b></a></text>
 <text top="107" left="72" width="467" height="96" font="4"><b>Latin America  </b></text>
+<text top="107" left="72" width="467" height="96" font="4"><a name="LAC"></a></text>
 <text top="193" left="72" width="598" height="96" font="4"><b>and the Caribbean</b></text>
-<text top="193" left="72" width="598" height="96" font="4"><a name="LAC"></a></text>
 <text top="344" left="72" width="226" height="64" font="5"><b>Caribbean</b></text>
 <text top="446" left="72" width="94" height="44" font="6"><a>Aruba</a></text>
 <text top="536" left="72" width="140" height="44" font="6"><a>Bahamas</a></text>
@@ -200,7 +200,7 @@
 <text top="4010" left="72" width="535" height="44" font="6"><a>Venezuela (Bolivarian Republic of)</a></text>
 </page>
 <page number="5" position="absolute" top="0" left="0" height="1536" width="1152">
-<image top="0" left="0" width="1152" height="1536" src="toc4.png"/>
+<image top="8" left="0" width="1152" height="1536" src="toc4.png"/>
 <text top="84" left="951" width="111" height="32" font="3"><a href="#ALL"><b>all regions</b></a></text>
 <text top="107" left="72" width="268" height="96" font="4"><b>Oceania</b></text>
 <text top="107" left="72" width="268" height="96" font="4"><a name="Oceania"></a></text>
@@ -218,7 +218,7 @@
 <text top="1260" left="72" width="128" height="44" font="6"><a>Vanuatu</a></text>
 </page>
 <page number="6" position="absolute" top="0" left="0" height="4284" width="1152">
-<image top="0" left="0" width="1152" height="4284" src="toc5.png"/>
+<image top="8" left="0" width="1152" height="4284" src="toc5.png"/>
 <text top="84" left="951" width="111" height="32" font="3"><a href="#ALL"><b>all regions</b></a></text>
 <text top="107" left="72" width="231" height="96" font="4"><b>Europe</b></text>
 <text top="107" left="72" width="231" height="96" font="4"><a name="Europe"></a></text>
@@ -266,7 +266,7 @@
 <text top="4032" left="72" width="837" height="44" font="6"><a>United Kingdom of Great Britain and Northern Ireland</a></text>
 </page>
 <page number="7" position="absolute" top="0" left="0" height="1536" width="1152">
-<image top="0" left="0" width="1152" height="1536" src="toc6.png"/>
+<image top="8" left="0" width="1152" height="1536" src="toc6.png"/>
 <text top="84" left="951" width="111" height="32" font="3"><a href="#ALL"><b>all regions</b></a></text>
 <text top="107" left="72" width="473" height="96" font="4"><b>North America</b></text>
 <text top="107" left="72" width="473" height="96" font="4"><a name="NA"></a></text>
@@ -289,6 +289,7 @@
 	<fontspec id="18" size="31" family="Times" color="#ffffff"/>
 	<fontspec id="19" size="31" family="Times" color="#f8c1b2"/>
 <image top="0" left="0" width="1152" height="11592" src="li_profile_bg.png"/>
+<text top="76" left="832" width="230" height="32" font="3"><a href="#{{ country.regionslug }}"><b>all countries in region</b></a></text>
 <text top="112" left="72" width="368" height="89" font="1">P20 profile: </text>
 <text top="197" left="72" width="594" height="96" font="0"><b>{{ country.longname }}</b></text>
 <text top="477" left="72" width="905" height="44" font="8">Agenda 2030 includes the specific commitment to Leave </text>
@@ -305,7 +306,7 @@
 <text top="1107" left="72" width="298" height="44" font="8">Age and Disability. </text>
 <text top="1197" left="72" width="912" height="47" font="8">This profile provides key available data about the status </text>
 <text top="1251" left="72" width="514" height="47" font="8">of the P20 in {{ country.name }}.</text>
-<text top="1571" left="162" width="617" height="64" font="5"><b>the P20 in {{ country.name }}</b></text>
+<text top="1551" left="162" width="617" height="64" font="5"><b>the P20 in {{ country.name }}</b></text>
 <text top="1674" left="72" width="710" height="44" font="6">[XX] people in {{ country.name }} are among </text>
 <text top="1728" left="72" width="763" height="44" font="6">the poorest 20% of the world’s population – the </text>
 <text top="1782" left="72" width="730" height="44" font="6">global P20. That is [X]% of the total population </text>
@@ -314,14 +315,14 @@
 <text top="1980" left="72" width="789" height="44" font="6">within {{ country.name }} – live on between $[XX] </text>
 <text top="2034" left="72" width="786" height="44" font="6">and $[XX] a day compared with an average $[XX] </text>
 <text top="2088" left="72" width="460" height="44" font="6">for the rest of the population.</text>
-<text top="2187" left="72" width="600" height="35" font="9"><b>Source: </b><a href="#{{ country.slug }}1">Development Initiatives based on PovcalNet</a></text>
+<text top="2187" left="72" width="600" height="35" font="9"><b>Source: </b>Development Initiatives based on PovcalNet</text>
 <text top="2190" left="672" width="5" height="20" font="11"><a href="#{{ country.slug }}1">1</a></text>
-<text top="2471" left="162" width="160" height="64" font="5"><b>income</b></text>
+<text top="2451" left="162" width="160" height="64" font="5"><b>income</b></text>
 <text top="2574" left="72" width="765" height="44" font="6">In 2000 the gap between the P20 and everyone </text>
 <text top="2628" left="72" width="775" height="44" font="6">else in {{ country.name }} was $[0.00] and in 2013 </text>
 <text top="2682" left="72" width="213" height="44" font="6">it was $[0.00].</text>
 <text top="3699" left="72" width="600" height="35" font="9"><b>Source: </b>Development Initiatives based on PovcalNet</text>
-<text top="3839" left="162" width="188" height="64" font="5"><b>nutrition</b></text>
+<text top="3819" left="162" width="188" height="64" font="5"><b>nutrition</b></text>
 <text top="3942" left="72" width="716" height="44" font="6">Nutrition is fundamental to the ability to learn </text>
 <text top="3996" left="72" width="790" height="44" font="6">and earn. Children who experience poor nutrition </text>
 <text top="4050" left="72" width="681" height="44" font="6">can suffer lifelong disadvantage as a result. </text>
@@ -330,9 +331,9 @@
 <text top="4248" left="72" width="696" height="44" font="6">experienced stunting compared with [XX]% </text>
 <text top="4302" left="72" width="448" height="44" font="6">of the rest of the population.</text>
 <text top="5139" left="72" width="765" height="35" font="9"><b>Source: </b>Development Initiatives based on UNICEF-WHO joint child </text>
-<text top="5176" left="72" width="251" height="32" font="10">malnutrition <a href="#{{ country.slug }}2">estimates</a></text>
+<text top="5176" left="72" width="251" height="32" font="10">malnutrition estimates</text>
 <text top="5178" left="323" width="8" height="20" font="11"><a href="#{{ country.slug }}2">2</a></text>
-<text top="5315" left="162" width="369" height="64" font="5"><b>birth registration</b></text>
+<text top="5298" left="162" width="369" height="64" font="5"><b>birth registration</b></text>
 <text top="5418" left="72" width="674" height="44" font="6">Civil Registration means people count and </text>
 <text top="5472" left="72" width="738" height="44" font="6">have rights. Worldwide around 71% of children </text>
 <text top="5526" left="72" width="687" height="44" font="6">are birth registered. If you are born into the </text>
@@ -346,7 +347,7 @@
 <text top="6867" left="72" width="987" height="35" font="9"><b>Source: </b>Development Initiatives based on World Bank World Development Indicators: </text>
 <text top="6904" left="72" width="418" height="32" font="10">Completeness of birth registration %</text>
 <text top="6906" left="490" width="8" height="20" font="11"><a href="#{{ country.slug }}3">3</a></text>
-<text top="7043" left="162" width="219" height="64" font="5"><b>education</b></text>
+<text top="7023" left="162" width="219" height="64" font="5"><b>education</b></text>
 <text top="7146" left="72" width="613" height="44" font="6">Education is fundamental to a person’s </text>
 <text top="7200" left="72" width="202" height="44" font="6">life chances. </text>
 <text top="7290" left="72" width="684" height="44" font="6">In {{ country.name }} [XX]% of people have </text>
@@ -355,7 +356,7 @@
 <text top="8172" left="72" width="723" height="44" font="6">a secondary education compared with [XX]% </text>
 <text top="8226" left="72" width="448" height="44" font="6">of the rest of the population.</text>
 <text top="9063" left="72" width="498" height="35" font="9"><b>Source: </b>Demographic Health Surveys (DHS)</text>
-<text top="9203" left="162" width="137" height="64" font="5"><b>health</b></text>
+<text top="9183" left="162" width="137" height="64" font="5"><b>health</b></text>
 <text top="9306" left="72" width="777" height="44" font="6">Poor health plays a major part in keeping people </text>
 <text top="9360" left="72" width="801" height="44" font="6">in poverty. If you are among the P20 you are more </text>
 <text top="9414" left="72" width="721" height="44" font="6">likely to suffer from preventable diseases and </text>
@@ -487,7 +488,6 @@
 <text top="10547" left="413" width="38" height="30" font="14">P20</text>
 <text top="10340" left="787" width="71" height="48" font="17"><b>XXX</b></text>
 <text top="10234" left="397" width="71" height="48" font="16"><b>XXX</b></text>
-<text top="84" left="832" width="230" height="32" font="3"><a href="#{{ country.regionslug }}"><b>all countries in region</b></a></text>
 <text top="11159" left="72" width="531" height="43" font="18">If you would like more information  </text>
 <text top="11204" left="72" width="555" height="43" font="18">or to speak to us, please get in touch:</text>
 <text top="11285" left="72" width="480" height="43" font="18">Zach Christensen, Senior Analyst </text>
@@ -498,6 +498,7 @@
 {% else %}
 <page number="{{ 8 + loop.index0 }}" position="absolute" top="0" left="0" height="8065" width="1152">
 <image top="0" left="0" width="1152" height="8065" src="hi_profile_bg.png"/>
+<text top="76" left="832" width="230" height="32" font="3"><a href="#{{ country.regionslug }}"><b>all countries in region</b></a></text>
 <text top="112" left="72" width="368" height="89" font="1">P20 profile: </text>
 <text top="197" left="72" width="594" height="96" font="0"><b>{{ country.longname }}</b></text>
 <text top="477" left="72" width="905" height="44" font="8">Agenda 2030 includes the specific commitment to Leave </text>
@@ -514,7 +515,7 @@
 <text top="1107" left="72" width="288" height="44" font="8">Age and Disability.</text>
 <text top="1197" left="72" width="912" height="47" font="8">This profile provides key available data about the status </text>
 <text top="1251" left="72" width="514" height="47" font="8">of the P20 in {{ country.name }}.</text>
-<text top="1571" left="162" width="617" height="64" font="5"><b>the P20 in {{ country.name }}</b></text>
+<text top="1551" left="162" width="617" height="64" font="5"><b>the P20 in {{ country.name }}</b></text>
 <text top="1674" left="72" width="710" height="44" font="6">[XX] people in {{ country.name }} are among </text>
 <text top="1728" left="72" width="763" height="44" font="6">the poorest 20% of the world’s population – the </text>
 <text top="1782" left="72" width="730" height="44" font="6">global P20. That is [X]% of the total population </text>
@@ -525,15 +526,15 @@
 <text top="2088" left="72" width="460" height="44" font="6">for the rest of the population.</text>
 <text top="2187" left="72" width="600" height="35" font="9"><b>Source: </b><a href="#{{ country.slug }}1">Development Initiatives based on PovcalNet</a></text>
 <text top="2190" left="672" width="5" height="20" font="11"><a href="#{{ country.slug }}1">1</a></text>
-<text top="2471" left="162" width="160" height="64" font="5"><b>income</b></text>
+<text top="2451" left="162" width="160" height="64" font="5"><b>income</b></text>
 <text top="2574" left="72" width="765" height="44" font="6">In 2000 the gap between the P20 and everyone </text>
 <text top="2628" left="72" width="775" height="44" font="6">else in {{ country.name }} was $[0.00] and in 2013 </text>
 <text top="2682" left="72" width="213" height="44" font="6">it was $[0.00].</text>
 <text top="3699" left="72" width="600" height="35" font="9"><b>Source: </b>Development Initiatives based on PovcalNet</text>
-<text top="3839" left="162" width="188" height="64" font="5"><b>nutrition</b></text>
+<text top="3819" left="162" width="188" height="64" font="5"><b>nutrition</b></text>
 <text top="3942" left="72" width="743" height="44" font="6">In {{ country.name }} [XX]% of adults are obese.</text>
 <text top="4779" left="72" width="882" height="35" font="9"><b>Source: </b>Development Initiatives based on NCD Risk Factor Collaboration 2017</text>
-<text top="4919" left="162" width="219" height="64" font="5"><b>education</b></text>
+<text top="4899" left="162" width="219" height="64" font="5"><b>education</b></text>
 <text top="5022" left="72" width="613" height="44" font="6">Education is fundamental to a person’s </text>
 <text top="5076" left="72" width="193" height="44" font="6">life chances.</text>
 <text top="5166" left="72" width="684" height="44" font="6">In {{ country.name }} [XX]% of people have </text>
@@ -544,7 +545,7 @@
 <text top="6174" left="72" width="755" height="44" font="6">and therefore we are unable to see completion </text>
 <text top="6228" left="72" width="780" height="44" font="6">rates for the P20 versus the rest of the population </text>
 <text top="6282" left="72" width="226" height="44" font="6">in this country.</text>
-<text top="6431" left="162" width="137" height="64" font="5"><b>health</b></text>
+<text top="6411" left="162" width="137" height="64" font="5"><b>health</b></text>
 <text top="6534" left="72" width="777" height="44" font="6">Poor health plays a major part in keeping people </text>
 <text top="6588" left="72" width="801" height="44" font="6">in poverty. If you are among the P20 you are more </text>
 <text top="6642" left="72" width="721" height="44" font="6">likely to suffer from preventable diseases and </text>
@@ -625,7 +626,6 @@
 <text top="7802" left="72" width="446" height="43" font="19"><a href="mailto:Zach.Christensen%40devinit.org?subject=">Zach.Christensen@devinit.org</a></text>
 <text top="7883" left="72" width="434" height="43" font="18">See more about this work at  </text>
 <text top="7928" left="72" width="332" height="43" font="19"><a href="http://www.devinit.org/p20i">www.devinit.org/p20i</a></text>
-<text top="84" left="832" width="230" height="32" font="3"><a href="#{{ country.regionslug }}"><b>all countries in region</b></a></text>
 </page>
 {% endif %}
 {% endfor %}
