--- a/final_template/template.xml.j2
+++ b/final_template/template.xml.j2
@@ -316,7 +316,7 @@
 <text top="2034" left="72" width="786" height="44" font="6">and $[XX] a day compared with an average $[XX] </text>
 <text top="2088" left="72" width="460" height="44" font="6">for the rest of the population.</text>
 <text top="2187" left="72" width="600" height="35" font="9"><b>Source: </b>Development Initiatives based on PovcalNet</text>
-<text top="2190" left="672" width="5" height="20" font="11"><a href="#{{ country.slug }}1">1</a></text>
+<text top="2190" left="622" width="5" height="20" font="11"><a href="#{{ country.slug }}1"><b>1</b></a></text>
 <text top="2451" left="162" width="160" height="64" font="5"><b>income</b></text>
 <text top="2574" left="72" width="765" height="44" font="6">In 2000 the gap between the P20 and everyone </text>
 <text top="2628" left="72" width="775" height="44" font="6">else in {{ country.name }} was $[0.00] and in 2013 </text>
@@ -332,7 +332,7 @@
 <text top="4302" left="72" width="448" height="44" font="6">of the rest of the population.</text>
 <text top="5139" left="72" width="765" height="35" font="9"><b>Source: </b>Development Initiatives based on UNICEF-WHO joint child </text>
 <text top="5176" left="72" width="251" height="32" font="10">malnutrition estimates</text>
-<text top="5178" left="323" width="8" height="20" font="11"><a href="#{{ country.slug }}2">2</a></text>
+<text top="5178" left="303" width="8" height="20" font="11"><a href="#{{ country.slug }}2"><b>2</b></a></text>
 <text top="5298" left="162" width="369" height="64" font="5"><b>birth registration</b></text>
 <text top="5418" left="72" width="674" height="44" font="6">Civil Registration means people count and </text>
 <text top="5472" left="72" width="738" height="44" font="6">have rights. Worldwide around 71% of children </text>
@@ -346,7 +346,7 @@
 <text top="6768" left="72" width="451" height="44" font="6">have [increased/decreased].</text>
 <text top="6867" left="72" width="987" height="35" font="9"><b>Source: </b>Development Initiatives based on World Bank World Development Indicators: </text>
 <text top="6904" left="72" width="418" height="32" font="10">Completeness of birth registration %</text>
-<text top="6906" left="490" width="8" height="20" font="11"><a href="#{{ country.slug }}3">3</a></text>
+<text top="6906" left="460" width="8" height="20" font="11"><a href="#{{ country.slug }}3"><b>3</b></a></text>
 <text top="7023" left="162" width="219" height="64" font="5"><b>education</b></text>
 <text top="7146" left="72" width="613" height="44" font="6">Education is fundamental to a person’s </text>
 <text top="7200" left="72" width="202" height="44" font="6">life chances. </text>
@@ -419,7 +419,7 @@
 <text top="2034" left="72" width="786" height="44" font="6">and $[XX] a day compared with an average $[XX] </text>
 <text top="2088" left="72" width="460" height="44" font="6">for the rest of the population.</text>
 <text top="2187" left="72" width="600" height="35" font="9"><b>Source: </b>Development Initiatives based on PovcalNet</text>
-<text top="2190" left="672" width="5" height="20" font="11"><a href="#{{ country.slug }}1">1</a></text>
+<text top="2190" left="622" width="5" height="20" font="11"><a href="#{{ country.slug }}1"><b>1</b></a></text>
 <text top="2451" left="162" width="160" height="64" font="5"><b>income</b></text>
 <text top="2574" left="72" width="765" height="44" font="6">In 2000 the gap between the P20 and everyone </text>
 <text top="2628" left="72" width="775" height="44" font="6">else in {{ country.name }} was $[0.00] and in 2013 </text>
