--- a/final_template/template.xml.j2
+++ b/final_template/template.xml.j2
@@ -32,7 +32,7 @@
 <text top="257" left="72" width="336" height="64" font="5"><b>Northern Africa</b></text>
 <text top="360" left="72" width="110" height="44" font="6"><a>Algeria</a></text>
 <text top="450" left="72" width="90" height="44" font="6"><a>Egypt</a></text>
-<text top="540" left="72" width="358" height="44" font="6"><a>Libyan Arab Jamahiriya</a></text>
+<text top="540" left="72" width="358" height="44" font="6"><a>State of Libya</a></text>
 <text top="630" left="72" width="145" height="44" font="6"><a>Morocco</a></text>
 <text top="720" left="72" width="105" height="44" font="6"><a>Tunisia</a></text>
 <text top="810" left="72" width="244" height="44" font="6"><a>Western Sahara</a></text>
