Sorted large headers and wrapping

--- a/final_template/template.xml.j2
+++ b/final_template/template.xml.j2
@@ -7,10 +7,10 @@
 	<fontspec id="1" size="70" family="Times" color="#ffffff"/>
 	<fontspec id="2" size="25" family="Times" color="#ffffff"/>
 <image top="0" left="0" width="1152" height="1544" src="cover.png"/>
+<text top="0" left="0" width="584" height="89" font="1"><a name="ALL"></a></text>
 <text top="337" left="242" width="416" height="96" font="0"><b>explore key  </b></text>
 <text top="424" left="242" width="504" height="96" font="0"><b>data on the P20</b></text>
 <text top="511" left="242" width="584" height="89" font="1">select your region:</text>
-<text top="511" left="242" width="584" height="89" font="1"><a name="ALL"></a></text>
 <text top="1196" left="364" width="175" height="36" font="2"><a href="#LAC"><b>Latin America  </b></a></text>
 <text top="1229" left="364" width="224" height="36" font="2"><a href="#LAC"><b>and the Caribbean</b></a></text>
 <text top="1168" left="869" width="100" height="36" font="2"><a href="#Oceania"><b>Oceania</b></a></text>
@@ -26,9 +26,9 @@
 	<fontspec id="6" size="34" family="Times" color="#453e43"/>
 	<fontspec id="7" size="34" family="Times" color="#453e43"/>
 <image top="8" left="0" width="1152" height="6138" src="toc1.png"/>
+<text top="0" left="0" width="192" height="96" font="4"><a name="Africa"></a></text>
 <text top="84" left="951" width="111" height="32" font="3"><a href="#ALL"><b>all regions</b></a></text>
 <text top="107" left="72" width="192" height="96" font="4"><b>Africa</b></text>
-<text top="107" left="72" width="192" height="96" font="4"><a name="Africa"></a></text>
 <text top="257" left="72" width="336" height="64" font="5"><b>Northern Africa</b></text>
 <text top="360" left="72" width="110" height="44" font="6"><a href="#algeria">Algeria</a></text>
 <text top="450" left="72" width="90" height="44" font="6"><a href="#egypt">Egypt</a></text>
@@ -93,9 +93,9 @@
 </page>
 <page number="3" position="absolute" top="0" left="0" height="5680" width="1152">
 <image top="8" left="0" width="1152" height="5680" src="toc2.png"/>
+<text top="0" left="0" width="138" height="96" font="4"><a name="Asia"></a></text>
 <text top="84" left="951" width="111" height="32" font="3"><a href="#ALL"><b>all regions</b></a></text>
 <text top="107" left="72" width="138" height="96" font="4"><b>Asia</b></text>
-<text top="107" left="72" width="138" height="96" font="4"><a name="Asia"></a></text>
 <text top="257" left="72" width="258" height="64" font="5"><b>Central Asia</b></text>
 <text top="360" left="72" width="174" height="44" font="6"><a href="#kazakhstan">Kazakhstan</a></text>
 <text top="450" left="72" width="171" height="44" font="6"><a href="#kyrgyzstan">Kyrgyzstan</a></text>
@@ -154,9 +154,9 @@
 </page>
 <page number="4" position="absolute" top="0" left="0" height="4266" width="1152">
 <image top="8" left="0" width="1152" height="4266" src="toc3.png"/>
+<text top="0" left="0" width="467" height="96" font="4"><a name="LAC"></a></text>
 <text top="84" left="951" width="111" height="32" font="3"><a href="#ALL"><b>all regions</b></a></text>
 <text top="107" left="72" width="467" height="96" font="4"><b>Latin America  </b></text>
-<text top="107" left="72" width="467" height="96" font="4"><a name="LAC"></a></text>
 <text top="193" left="72" width="598" height="96" font="4"><b>and the Caribbean</b></text>
 <text top="344" left="72" width="226" height="64" font="5"><b>Caribbean</b></text>
 <text top="446" left="72" width="94" height="44" font="6"><a href="#aruba">Aruba</a></text>
@@ -201,9 +201,9 @@
 </page>
 <page number="5" position="absolute" top="0" left="0" height="1536" width="1152">
 <image top="8" left="0" width="1152" height="1536" src="toc4.png"/>
+<text top="0" left="0" width="268" height="96" font="4"><a name="Oceania"></a></text>
 <text top="84" left="951" width="111" height="32" font="3"><a href="#ALL"><b>all regions</b></a></text>
 <text top="107" left="72" width="268" height="96" font="4"><b>Oceania</b></text>
-<text top="107" left="72" width="268" height="96" font="4"><a name="Oceania"></a></text>
 <text top="270" left="72" width="132" height="44" font="6"><a href="#australia">Australia</a></text>
 <text top="360" left="72" width="40" height="44" font="6"><a href="#fiji">Fiji</a></text>
 <text top="450" left="72" width="262" height="44" font="6"><a href="#french-polynesia">French Polynesia</a></text>
@@ -219,9 +219,9 @@
 </page>
 <page number="6" position="absolute" top="0" left="0" height="4284" width="1152">
 <image top="8" left="0" width="1152" height="4284" src="toc5.png"/>
+<text top="0" left="0" width="231" height="96" font="4"><a name="Europe"></a></text>
 <text top="84" left="951" width="111" height="32" font="3"><a href="#ALL"><b>all regions</b></a></text>
 <text top="107" left="72" width="231" height="96" font="4"><b>Europe</b></text>
-<text top="107" left="72" width="231" height="96" font="4"><a name="Europe"></a></text>
 <text top="257" left="72" width="322" height="64" font="5"><b>Eastern Europe</b></text>
 <text top="360" left="72" width="117" height="44" font="6"><a href="#albania">Albania</a></text>
 <text top="450" left="72" width="112" height="44" font="6"><a href="#belarus">Belarus</a></text>
@@ -267,9 +267,9 @@
 </page>
 <page number="7" position="absolute" top="0" left="0" height="1536" width="1152">
 <image top="8" left="0" width="1152" height="1536" src="toc6.png"/>
+<text top="0" left="0" width="473" height="96" font="4"><a name="NA"></a></text>
 <text top="84" left="951" width="111" height="32" font="3"><a href="#ALL"><b>all regions</b></a></text>
 <text top="107" left="72" width="473" height="96" font="4"><b>North America</b></text>
-<text top="107" left="72" width="473" height="96" font="4"><a name="NA"></a></text>
 <text top="270" left="72" width="120" height="44" font="6"><a href="#canada">Canada</a></text>
 <text top="360" left="72" width="388" height="44" font="6"><a href="#usa">United States of America</a></text>
 </page>
@@ -289,10 +289,10 @@
 	<fontspec id="18" size="31" family="Times" color="#ffffff"/>
 	<fontspec id="19" size="31" family="Times" color="#f8c1b2"/>
 <image top="0" left="0" width="1152" height="11592" src="li_profile_bg_noc.png"/>
+<text top="0" left="0" width="594" height="96" font="0"><a name="{{ country.slug }}"></a></text>
 <text top="76" left="832" width="230" height="32" font="3"><a href="#{{ country.regionslug }}"><b>all countries in region</b></a></text>
 <text top="112" left="72" width="368" height="89" font="1">P20 profile: </text>
-<text top="197" left="72" width="594" height="96" font="0"><b>{{ country.longname }}</b></text>
-<text top="197" left="72" width="594" height="96" font="0"><a name="{{ country.slug }}"></a></text>
+<text top="197" left="72" width="1008" height="96" font="0" shrink="True"><b>{{ country.longname }}</b></text>
 <text top="477" left="72" width="905" height="44" font="8">Agenda 2030 includes the specific commitment to Leave </text>
 <text top="531" left="72" width="900" height="44" font="8">No One Behind. Together with Sustainable Development </text>
 <text top="585" left="72" width="965" height="44" font="8">Goal 10 to reduce inequality, this requires faster than average </text>
@@ -393,10 +393,10 @@
 {% else %}
 <page number="{{ 8 + loop.index0 }}" position="absolute" top="0" left="0" height="8065" width="1152">
 <image top="0" left="0" width="1152" height="8065" src="hi_profile_bg_noc.png"/>
+<text top="0" left="0" width="594" height="96" font="0"><a name="{{ country.slug }}"></a></text>
 <text top="76" left="832" width="230" height="32" font="3"><a href="#{{ country.regionslug }}"><b>all countries in region</b></a></text>
 <text top="112" left="72" width="368" height="89" font="1">P20 profile: </text>
-<text top="197" left="72" width="594" height="96" font="0"><b>{{ country.longname }}</b></text>
-<text top="197" left="72" width="594" height="96" font="0"><a name="{{ country.slug }}"></a></text>
+<text top="197" left="72" width="1008" height="96" font="0" shrink="True"><b>{{ country.longname }}</b></text>
 <text top="477" left="72" width="905" height="44" font="8">Agenda 2030 includes the specific commitment to Leave </text>
 <text top="531" left="72" width="900" height="44" font="8">No One Behind. Together with Sustainable Development </text>
 <text top="585" left="72" width="965" height="44" font="8">Goal 10 to reduce inequality, this requires faster than average </text>
