Start to add rectangle links

--- a/final_template/template.xml.j2
+++ b/final_template/template.xml.j2
@@ -11,12 +11,18 @@
 <text top="337" left="242" width="416" height="96" font="0"><b>explore key  </b></text>
 <text top="424" left="242" width="504" height="96" font="0"><b>data on the P20</b></text>
 <text top="511" left="242" width="584" height="89" font="1">select your region:</text>
+<button top="1196" left="364" width="224" height="72" pl="60" pr="30" pt="15" pb="20" href="LAC"/>
 <text top="1196" left="364" width="175" height="36" font="2"><a href="#LAC"><b>Latin America  </b></a></text>
 <text top="1229" left="364" width="224" height="36" font="2"><a href="#LAC"><b>and the Caribbean</b></a></text>
+<button top="1168" left="869" width="100" height="36" pl="30" pr="60" pt="15" pb="25" href="Oceania"/>
 <text top="1168" left="869" width="100" height="36" font="2"><a href="#Oceania"><b>Oceania</b></a></text>
+<button top="1083" left="646" width="72" height="36" pl="60" pr="30" pt="15" pb="25" href="Africa"/>
 <text top="1083" left="646" width="72" height="36" font="2"><a href="#Africa"><b>Africa</b></a></text>
+<button top="941" left="877" width="52" height="36" pl="60" pr="30" pt="15" pb="25" href="Asia"/>
 <text top="941" left="877" width="52" height="36" font="2"><a href="#Asia"><b>Asia</b></a></text>
+<button top="941" left="616" width="87" height="36" pl="60" pr="30" pt="15" pb="25" href="Europe"/>
 <text top="941" left="616" width="87" height="36" font="2"><a href="#Europe"><b>Europe</b></a></text>
+<button top="941" left="209" width="178" height="36" pl="60" pr="30" pt="15" pb="25" href="NA"/>
 <text top="941" left="209" width="178" height="36" font="2"><a href="#NA"><b>North America</b></a></text>
 </page>
 <page number="2" position="absolute" top="0" left="0" height="6138" width="1152">
@@ -27,6 +33,7 @@
 	<fontspec id="7" size="34" family="Times" color="#453e43"/>
 <image top="8" left="0" width="1152" height="6138" src="toc1.png"/>
 <text top="0" left="0" width="192" height="96" font="4"><a name="Africa"></a></text>
+<button top="84" left="951" width="111" height="32" pl="45" pr="17" pt="7" pb="25" href="ALL"/>
 <text top="84" left="951" width="111" height="32" font="3"><a href="#ALL"><b>all regions</b></a></text>
 <text top="107" left="72" width="192" height="96" font="4"><b>Africa</b></text>
 <text top="257" left="72" width="336" height="64" font="5"><b>Northern Africa</b></text>
@@ -94,6 +101,7 @@
 <page number="3" position="absolute" top="0" left="0" height="5680" width="1152">
 <image top="8" left="0" width="1152" height="5680" src="toc2.png"/>
 <text top="0" left="0" width="138" height="96" font="4"><a name="Asia"></a></text>
+<button top="84" left="951" width="111" height="32" pl="45" pr="17" pt="7" pb="25" href="ALL"/>
 <text top="84" left="951" width="111" height="32" font="3"><a href="#ALL"><b>all regions</b></a></text>
 <text top="107" left="72" width="138" height="96" font="4"><b>Asia</b></text>
 <text top="257" left="72" width="258" height="64" font="5"><b>Central Asia</b></text>
@@ -155,6 +163,7 @@
 <page number="4" position="absolute" top="0" left="0" height="4266" width="1152">
 <image top="8" left="0" width="1152" height="4266" src="toc3.png"/>
 <text top="0" left="0" width="467" height="96" font="4"><a name="LAC"></a></text>
+<button top="84" left="951" width="111" height="32" pl="45" pr="17" pt="7" pb="25" href="ALL"/>
 <text top="84" left="951" width="111" height="32" font="3"><a href="#ALL"><b>all regions</b></a></text>
 <text top="107" left="72" width="467" height="96" font="4"><b>Latin America  </b></text>
 <text top="193" left="72" width="598" height="96" font="4"><b>and the Caribbean</b></text>
@@ -202,6 +211,7 @@
 <page number="5" position="absolute" top="0" left="0" height="1536" width="1152">
 <image top="8" left="0" width="1152" height="1536" src="toc4.png"/>
 <text top="0" left="0" width="268" height="96" font="4"><a name="Oceania"></a></text>
+<button top="84" left="951" width="111" height="32" pl="45" pr="17" pt="7" pb="25" href="ALL"/>
 <text top="84" left="951" width="111" height="32" font="3"><a href="#ALL"><b>all regions</b></a></text>
 <text top="107" left="72" width="268" height="96" font="4"><b>Oceania</b></text>
 <text top="270" left="72" width="132" height="44" font="6"><a href="#australia">Australia</a></text>
@@ -220,6 +230,7 @@
 <page number="6" position="absolute" top="0" left="0" height="4284" width="1152">
 <image top="8" left="0" width="1152" height="4284" src="toc5.png"/>
 <text top="0" left="0" width="231" height="96" font="4"><a name="Europe"></a></text>
+<button top="84" left="951" width="111" height="32" pl="45" pr="17" pt="7" pb="25" href="ALL"/>
 <text top="84" left="951" width="111" height="32" font="3"><a href="#ALL"><b>all regions</b></a></text>
 <text top="107" left="72" width="231" height="96" font="4"><b>Europe</b></text>
 <text top="257" left="72" width="322" height="64" font="5"><b>Eastern Europe</b></text>
@@ -268,6 +279,7 @@
 <page number="7" position="absolute" top="0" left="0" height="1536" width="1152">
 <image top="8" left="0" width="1152" height="1536" src="toc6.png"/>
 <text top="0" left="0" width="473" height="96" font="4"><a name="NA"></a></text>
+<button top="84" left="951" width="111" height="32" pl="45" pr="17" pt="7" pb="25" href="ALL"/>
 <text top="84" left="951" width="111" height="32" font="3"><a href="#ALL"><b>all regions</b></a></text>
 <text top="107" left="72" width="473" height="96" font="4"><b>North America</b></text>
 <text top="270" left="72" width="120" height="44" font="6"><a href="#canada">Canada</a></text>
